Hamburger Menu Spacing Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ body input + label span {
   transition: 0.5s;
 }
 body input + label span:first-child {
-  top: 3px;
+  top: 4px;
 }
 body input + label span:last-child {
   top: 16px;
